--- a/ad1-index.html
+++ b/ad1-index.html
@@ -18,7 +18,7 @@ The metadata can be used by browsers (how to display content or reload page), se
 
 <meta name="author" content="John Smith">
 
-<!-- here's the bookmark icon for the page -->
+<!-- here's the bookmark icon for the page -->x
 <link rel="icon" href="images/favicon-32x32.png">
 
 <!-- the page title -->
