--- a/ad2-index.html
+++ b/ad2-index.html
@@ -47,150 +47,91 @@ The metadata can be used by browsers (how to display content or reload page), se
 
    <div class="row">
 
+      <div class="col-md-12">
+       will have gradient background
+      </div>
+
+    <div class="col-sm-6 col-md-4">
+      <img src="images/img010.jpg" class="thumbnail" alt="Italian Trulli">
+      contains both logo and slogan
+
+      <div class="col-sm-6 col-md-12">
+        <img src="images/img010.jpg" class="thumbnail" alt="Italian Trulli">
+        logo
+      </div>
+      <div class="col-sm-6 col-md-12">
+        <img src="images/img010.jpg" class="thumbnail" alt="Italian Trulli">
+        slogan
+      </div>
+    </div>
+
+    <div class="col-sm-0 col-md-4">
+      <img src="images/img010.jpg" class="thumbnail" alt="Italian Trulli">
+      blank space
+    </div>
+
+    <div class="col-sm-6 col-md-4">
+      <img src="images/img010.jpg" class="thumbnail" alt="Italian Trulli">
+      product
+    </div>
+
+   </div><!-- /row -->
+
+
+   <div class="row ">
+
+    <div class="col-md-2">
+      blank space
+      <img src="images/img010.jpg" class="thumbnail" alt="Italian Trulli">
+    </div>
+
     <div class="col-md-8">
-      <div class="jumbotron">
-
-        <div class="main-text">
-         <h1 class="main-headline">Cisco's Journey</h1>
-         <h2>where is my sauce?</h2>
-         <p>"Best spicy meatball i have ever tasted in years" - <span>Cher Pallie, Pizza Pally owner*</span></p>
-         <p>It sucks." - <span>Critic055*</span></p>
-         <p>"A worst way to waste your time." - <span>John Cammy, the movie's director*</span></p>
-         <p>Join on a man's journey on a quest to solve one of man's oldest question: why is his sauce? Join on this thrilling, romantic, awesome, horrifying, dissapointing, heart-pumping, foot-breaking,</p>
-       </div><!-- main-text -->
-
-       <div class="bottle">
-        <img src="images/bottle.png" class="main-image rotate drop-shadow" alt="bottle image description text goes here">
-      </div><!-- bottle-->
-
-      <div class="big-dot drop-shadow">
-        <span class="dot"></span>
-      </div><!-- big-dot -->
-
-      <p class="company-name">Kim<br>Crawford</p>
-      <p class="company-url">KimCrawfordProductions.com</p>
-
-    </div><!-- /jumbotron main-content -->
-
-  </div><!-- /8 -->
-
-  <div class="col-lg-4">
-
-  </div><!-- /4 -->
-
-</div><!-- /row -->
-
-
-
-
-
-
-
-
-
-
-
-<div class="row ">
-
- <div class="col-lg-8">
-
-  <div class="second-ad-container">
-
-    <div class="row ">
-
-      <div class="col-lg-12 bg">
-        </div><!-- /12 -->
-
-      </div><!-- /row -->
-
-      <div class="row ">
-
-        <div class="col-lg-8">
-          <h1 class="animated bounceInDown the-headline">Our Producer, Kim Crawford, expert yelp reviewer and amatuer comedian.</h1>
-        </div><!-- /8 -->
-
-        <div class="col-lg-4">
-
-          <img src="images/logo.png" class="logo animated bounceInRight" alt="logo description text goes here">
-
-          <p class="callout-text">Panam does not sponsor us. This is for marketing, please don't sue us. </p>
-        </div><!-- /4 -->
-
-
-
-
-        <div class="col-lg-6 corporate-motto-bg-1 logo-container">
-          <img src="images/logo-2.gif" class="logo2" alt="logo description text goes here">
-        </div><!-- /6 -->
-
-        <div class="col-lg-6 corporate-motto-bg-2 social">
-          <img src="images/social-icons.gif" class="logo2" alt="social description text goes here">
-        </div><!-- /6 -->
-
-
-
-        <div class="col-lg-12">
-          <p class="url"><a href="https://panam.com">PANAM.com</a></p>
-        </div><!-- /12 -->
-
-      </div><!-- /row -->
-
-    </div><!-- /second-ad-container -->
-
-
-
-
-
-
-
-    <div class="third-ad-container">
-
-      <div class="row ">
-        <div class="col-lg-12">
-          <div id="map">
-
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d195601.2871992452!2d-75.2581157790596!3d40.002413677079666!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6b7d8d4b54beb%3A0x89f514d88c3e58c1!2sPhiladelphia%2C%20PA!5e0!3m2!1sen!2sus!4v1570843406466!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-
-
-          </div><!-- map -->
-        </div><!-- /12 -->
-      </div><!-- /row -->
-
-      <div class="row ">
-        <div class="col-lg-8">
-          <h1 class="animated bounceInDown the-headline">Released in all theatres* on march 14th, 3320.</h1>
-        </div><!-- /8 -->
-
-        <div class="col-lg-4">
-          <img src="images/logo.png" class="logo animated bounceInRight" alt="logo description text goes here">
-
-          <p class="callout-text">*specically in Philly</p>
-        </div><!-- /4 -->
-
-
-
-
-        <div class="col-lg-6 corporate-motto-bg-1 logo-container">
-          <!-- <img src="images/logo-2.gif" class="logo2" alt="logo description text goes here"> -->
-        </div><!-- /6 -->
-
-        <div class="col-lg-6 corporate-motto-bg-2 social">
-          <img src="images/social-icons.gif" class="logo2" alt="social media image text goes here">
-        </div><!-- /6 -->
-
-
-
-        <div class="col-lg-12">
-          <p class="url"><a href="https://panam.com">PANAM.com</a></p>
-        </div><!-- /12 -->
-
-      </div><!-- /row -->
-
-    </div><!-- /third-ad-container -->
-  </div><!-- /6 -->
-
-</div><!-- /row -->
-
+      video commercial
+      <img src="images/img010.jpg" class="thumbnail" alt="Italian Trulli">
+    </div>
+
+    <div class="col-md-2">
+      blank space
+      <img src="images/img010.jpg" class="thumbnail" alt="Italian Trulli">
+    </div>
+
+   </div><!-- /row -->
+
+   <div class="row ">
+
+    <div class="col-sm-6 col-md-6">
+      how many people used it
+      <img src="images/img010.jpg" class="thumbnail" alt="Italian Trulli">
+    </div>
+
+    <div class="col-sm-6 col-md-6">
+      pie chart
+      <img src="images/img010.jpg" class="thumbnail" alt="Italian Trulli">
+    </div>
+
+   </div>
+
+   <div class="row ">
+
+    <div class="col-md-12">
+      trusted in these locations
+      <img src="images/img010.jpg" class="thumbnail" alt="Italian Trulli">
+    </div>
+      
+    <div class="col-md-4">
+      map1
+      <img src="images/img010.jpg" class="thumbnail" alt="Italian Trulli">
+    </div>
+    <div class="col-md-4">
+      map2
+      <img src="images/img010.jpg" class="thumbnail" alt="Italian Trulli">
+    </div>
+    <div class="col-md-4">
+      map3
+      <img src="images/img010.jpg" class="thumbnail" alt="Italian Trulli">
+    </div>
+
+   </div>
 
 
 
