--- a/ad2-index.html
+++ b/ad2-index.html
@@ -45,34 +45,20 @@ The metadata can be used by browsers (how to display content or reload page), se
 
   <div id="the-content" class="container">
 
-   <div class="row">
+   <div class="row grad">
 
-      <div class="col-md-12">
-       will have gradient background
-      </div>
-
-    <div class="col-sm-6 col-md-4">
-      <img src="images/img010.jpg" class="thumbnail" alt="Italian Trulli">
-      contains both logo and slogan
+    <div class="col-sm-6 col-md-6">
 
       <div class="col-sm-6 col-md-12">
-        <img src="images/img010.jpg" class="thumbnail" alt="Italian Trulli">
-        logo
+        <img src="images/lemono logo.png" class="logo-container" alt="Italian Trulli">
       </div>
       <div class="col-sm-6 col-md-12">
-        <img src="images/img010.jpg" class="thumbnail" alt="Italian Trulli">
-        slogan
+        <p>Turning your life, unsour. </p>
       </div>
     </div>
 
-    <div class="col-sm-0 col-md-4">
-      <img src="images/img010.jpg" class="thumbnail" alt="Italian Trulli">
-      blank space
-    </div>
-
-    <div class="col-sm-6 col-md-4">
-      <img src="images/img010.jpg" class="thumbnail" alt="Italian Trulli">
-      product
+    <div class="col-sm-6 col-md-6">
+      <img src="images/png-medicine-bottle-pill-bottle-600.png" class="logo-container" alt="Italian Trulli">
     </div>
 
    </div><!-- /row -->
@@ -81,27 +67,21 @@ The metadata can be used by browsers (how to display content or reload page), se
    <div class="row ">
 
     <div class="col-md-2">
-      blank space
-      <img src="images/img010.jpg" class="thumbnail" alt="Italian Trulli">
     </div>
 
     <div class="col-md-8">
-      video commercial
-      <img src="images/img010.jpg" class="thumbnail" alt="Italian Trulli">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
     <div class="col-md-2">
-      blank space
-      <img src="images/img010.jpg" class="thumbnail" alt="Italian Trulli">
     </div>
 
    </div><!-- /row -->
 
-   <div class="row ">
+   <div class="row grad2">
 
     <div class="col-sm-6 col-md-6">
-      how many people used it
-      <img src="images/img010.jpg" class="thumbnail" alt="Italian Trulli">
+      <h2>18k people have used this. </h2>
     </div>
 
     <div class="col-sm-6 col-md-6">
@@ -114,21 +94,17 @@ The metadata can be used by browsers (how to display content or reload page), se
    <div class="row ">
 
     <div class="col-md-12">
-      trusted in these locations
-      <img src="images/img010.jpg" class="thumbnail" alt="Italian Trulli">
+      <h1>Trusted in these locations.</h1>
     </div>
       
     <div class="col-md-4">
-      map1
-      <img src="images/img010.jpg" class="thumbnail" alt="Italian Trulli">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d99370.36297093317!2d-77.08461580023939!3d38.89370913967648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7c6de5af6e45b%3A0xc2524522d4885d2a!2sWashington%2C%20DC!5e0!3m2!1sen!2sus!4v1571508386121!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
     </div>
     <div class="col-md-4">
-      map2
-      <img src="images/img010.jpg" class="thumbnail" alt="Italian Trulli">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d184551.80858344134!2d-79.51814105054963!3d43.718403810977776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d4cb90d7c63ba5%3A0x323555502ab4c477!2sToronto%2C%20ON%2C%20Canada!5e0!3m2!1sen!2sus!4v1571508430779!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
     </div>
     <div class="col-md-4">
-      map3
-      <img src="images/img010.jpg" class="thumbnail" alt="Italian Trulli">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d300233.19124883635!2d-118.23484423090969!3d34.02609846969616!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c75ddc27da13%3A0xe22fdf6f254608f4!2sLos%20Angeles%2C%20CA!5e0!3m2!1sen!2sus!4v1571508471347!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
     </div>
 
    </div>
