--- a/ad1-index.html
+++ b/ad1-index.html
@@ -56,38 +56,46 @@ The metadata can be used by browsers (how to display content or reload page), se
   </div>
   <div class="row">
     <div class="col-sm-12 col-md-4 col-lg-4">
-      Trailer video
-      <img src="images/img010.jpg" class="thumbnail" alt="Italian Trulli">
-      Trailer video
-      <img src="images/img010.jpg" class="thumbnail" alt="Italian Trulli">
-    </div>
 
-    <div class="col-sm-12 col-md-8 col-lg-4">
-      Fake quoted reviews
-     <img src="images/img010.jpg" class="thumbnail" alt="Italian Trulli">
-      Fake quoted reviews
-      <img src="images/img010.jpg" class="thumbnail" alt="Italian Trulli">
-    </div>
-
-    <div class="col-sm-12 col-md-6 col-lg-4">
-      Synopsis
-      <img src="images/img010.jpg" class="thumbnail" alt="Italian Trulli">
       <div class="col-md-12">
-        Synopsis Descriptions
-        <img src="images/img010.jpg" class="thumbnail" alt="Italian Trulli">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+
+      <div class="col-md-12">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+
+    </div>
+
+    <div class="col-sm-12 col-md-8 grad col-lg-4">
+
+      <div class="col-md-12">
+        <p>"Beautiful, inspiring, <i>WONDERFUL</i>...I never knew a movie about spaghetti and meatballs would make me cry." </p>
+        <h1>- The New York Times</h1>
+      </div>
+
+      <div class="col-md-12">
+        <p>"I cried so much, I had to go to the hospital." </p>
+        <h1>- Rotten Tomatoes</h1>
+      </div>
+
+    </div>
+
+    <div class="col-sm-12 col-md-6 grad2 col-lg-4">
+      <h2>Synopsis</h2>
+      <div class="col-md-12">
+        <p>Join Mr. Spaghetti as he goes on a dangerous journey to save his dag, Meatball from the clutches of Chef Evil. But first he needs to get into a maze while defeating the other contestants while trying to cure a rare disease. Will Mr. Spaghetti save Meatball, get cured and escape this nightmare? <i>OR WILL HE GET FORKED?</i></p>
       </div>
       <div class="col-md-12">
-        Release date
-        <img src="images/img010.jpg" class="thumbnail" alt="Italian Trulli">
+        <p> Premiering on</p>
+        <h1>6/9/69</h1>
       </div>
     </div>
 
     <div class="col-sm-12 col-md-6 col-lg-12">
-      location
-      <img src="images/img010.jpg" class="thumbnail" alt="Italian Trulli">
+      <h1>Premiering in this location.</h1>
       <div class="col-md-12">
-        Map
-        <img src="images/img010.jpg" class="thumbnail" alt="Italian Trulli">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d408290.0854991009!2d-86.3082570005955!3d39.70433194564201!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x886b50ffa7796a03%3A0xd68e9df640b9ea7c!2sIndianapolis%2C%20IN!5e0!3m2!1sen!2sus!4v1571590949591!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
       </div>
     </div>
 
