--- a/ad1-index.html
+++ b/ad1-index.html
@@ -41,7 +41,7 @@ The metadata can be used by browsers (how to display content or reload page), se
 
 
 
-<body class="">
+<body class="center">
 
   <div id="the-content" class="container">
 
@@ -49,8 +49,7 @@ The metadata can be used by browsers (how to display content or reload page), se
 
     <div class="col-md-12">
       <div class="col-md-12">
-        Movie poster
-        <img src="images/img010.jpg" class="thumbnail" alt="Italian Trulli">
+        <img src="images/movie poster.png" class="center" alt="Italian Trulli">
       </div>
     </div><!-- /jumbotron main-content -->
   </div>
