--- a/ad1-index.html
+++ b/ad1-index.html
@@ -53,7 +53,7 @@ The metadata can be used by browsers (how to display content or reload page), se
       </div>
     </div><!-- /jumbotron main-content -->
   </div>
-  <div class="row">
+  <div class="row grad3">
     <div class="col-sm-12 col-md-4 col-lg-4">
 
       <div class="col-md-12">
@@ -66,21 +66,21 @@ The metadata can be used by browsers (how to display content or reload page), se
 
     </div>
 
-    <div class="col-sm-12 col-md-8 grad col-lg-4">
+    <div class="col-sm-12 col-md-8 col-lg-4">
 
       <div class="col-md-12">
-        <p>"Beautiful, inspiring, <i>WONDERFUL</i>...I never knew a movie about spaghetti and meatballs would make me cry." </p>
-        <h1>- The New York Times</h1>
+        <h3>"Beautiful, inspiring, <i>WONDERFUL</i>...I never knew a movie about spaghetti and meatballs would make me cry." </h3>
+        <p>- The New York Times</p>
       </div>
 
       <div class="col-md-12">
-        <p>"I cried so much, I had to go to the hospital." </p>
-        <h1>- Rotten Tomatoes</h1>
+        <h3>"I cried so much, I had to go to the hospital." </h3>
+        <p>- Rotten Tomatoes</p>
       </div>
 
     </div>
 
-    <div class="col-sm-12 col-md-6 grad2 col-lg-4">
+    <div class="col-sm-12 col-md-6 col-lg-4">
       <h2>Synopsis</h2>
       <div class="col-md-12">
         <p>Join Mr. Spaghetti as he goes on a dangerous journey to save his dag, Meatball from the clutches of Chef Evil. But first he needs to get into a maze while defeating the other contestants while trying to cure a rare disease. Will Mr. Spaghetti save Meatball, get cured and escape this nightmare? <i>OR WILL HE GET FORKED?</i></p>
