--- a/ad2-index.html
+++ b/ad2-index.html
@@ -35,7 +35,7 @@ The metadata can be used by browsers (how to display content or reload page), se
 <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.css" rel="stylesheet">
 
 <!-- now for your custom CSS loaded *after* the bootstrap CSS and google fonts are loaded, above-->
-<link href="css/custom.css" rel="stylesheet">
+<link href="css/custom2.css" rel="stylesheet">
 
 </head>
 
@@ -85,26 +85,57 @@ The metadata can be used by browsers (how to display content or reload page), se
     </div>
 
     <div class="col-sm-6 col-md-6">
-      pie chart
-      <img src="images/img010.jpg" class="thumbnail" alt="Italian Trulli">
+      <!DOCTYPE HTML>
+<html>
+<head>
+<script>
+window.onload = function() {
+
+var chart = new CanvasJS.Chart("chartContainer", {
+  animationEnabled: true,
+  title: {
+    text: "The results after they used it."
+  },
+  data: [{
+    type: "pie",
+    startAngle: 240,
+    yValueFormatString: "##0.00\"%\"",
+    indexLabel: "{label} {y}",
+    dataPoints: [
+      {y: 80.5, label: "Happy"},
+      {y: 8.5, label: "Satisfied"},
+            {y: 1.5, label: "Full of purpose"}
+    ]
+  }]
+});
+chart.render();
+
+}
+</script>
+</head>
+<body>
+<div id="chartContainer" style="height: 370px; width: 100%;"></div>
+<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+</body>
+</html>
     </div>
 
    </div>
 
-   <div class="row ">
+   <div class="row">
 
     <div class="col-md-12">
       <h1>Trusted in these locations.</h1>
     </div>
       
     <div class="col-md-4">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d99370.36297093317!2d-77.08461580023939!3d38.89370913967648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7c6de5af6e45b%3A0xc2524522d4885d2a!2sWashington%2C%20DC!5e0!3m2!1sen!2sus!4v1571508386121!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d99370.36297093317!2d-77.08461580023939!3d38.89370913967648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7c6de5af6e45b%3A0xc2524522d4885d2a!2sWashington%2C%20DC!5e0!3m2!1sen!2sus!4v1571508386121!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" class="map"></iframe>
     </div>
     <div class="col-md-4">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d184551.80858344134!2d-79.51814105054963!3d43.718403810977776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d4cb90d7c63ba5%3A0x323555502ab4c477!2sToronto%2C%20ON%2C%20Canada!5e0!3m2!1sen!2sus!4v1571508430779!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d184551.80858344134!2d-79.51814105054963!3d43.718403810977776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d4cb90d7c63ba5%3A0x323555502ab4c477!2sToronto%2C%20ON%2C%20Canada!5e0!3m2!1sen!2sus!4v1571508430779!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" class="map"></iframe>
     </div>
     <div class="col-md-4">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d300233.19124883635!2d-118.23484423090969!3d34.02609846969616!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c75ddc27da13%3A0xe22fdf6f254608f4!2sLos%20Angeles%2C%20CA!5e0!3m2!1sen!2sus!4v1571508471347!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d300233.19124883635!2d-118.23484423090969!3d34.02609846969616!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c75ddc27da13%3A0xe22fdf6f254608f4!2sLos%20Angeles%2C%20CA!5e0!3m2!1sen!2sus!4v1571508471347!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" class="map"></iframe>
     </div>
 
    </div>
