--- a/ad1-index.html
+++ b/ad1-index.html
@@ -49,7 +49,7 @@ The metadata can be used by browsers (how to display content or reload page), se
 
     <div class="col-md-12">
       <div class="col-md-12">
-        <img src="images/movie poster.png" class="center" alt="Italian Trulli">
+        <img src="images/movie_poster.png" class="animated bounceInDown center" alt="Italian Trulli">
       </div>
     </div><!-- /jumbotron main-content -->
   </div>
@@ -57,11 +57,11 @@ The metadata can be used by browsers (how to display content or reload page), se
     <div class="col-sm-12 col-md-4 col-lg-4">
 
       <div class="col-md-12">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="animated bounceInLeft center"></iframe>
       </div>
 
       <div class="col-md-12">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="animated bounceInLeft center"></iframe>
       </div>
 
     </div>
@@ -80,7 +80,7 @@ The metadata can be used by browsers (how to display content or reload page), se
 
     </div>
 
-    <div class="col-sm-12 col-md-6 col-lg-4">
+    <div class="col-sm-12 col-md-6 col-lg-4 animated bounceInRight">
       <h2>Synopsis</h2>
       <div class="col-md-12">
         <p>Join Mr. Spaghetti as he goes on a dangerous journey to save his dag, Meatball from the clutches of Chef Evil. But first he needs to get into a maze while defeating the other contestants while trying to cure a rare disease. Will Mr. Spaghetti save Meatball, get cured and escape this nightmare? <i>OR WILL HE GET FORKED?</i></p>
