--- a/ad2-index.html
+++ b/ad2-index.html
@@ -45,7 +45,7 @@ The metadata can be used by browsers (how to display content or reload page), se
 
   <div id="the-content" class="container">
 
-   <div class="row grad">
+   <div class="row grad animated bounceInLeft">
 
     <div class="col-sm-6 col-md-6">
 
@@ -122,7 +122,7 @@ chart.render();
 
    </div>
 
-   <div class="row">
+   <div class="row animated bounceInRight">
 
     <div class="col-md-12">
       <h1>Trusted in these locations.</h1>
