--- a/ad1-index.html
+++ b/ad1-index.html
@@ -95,13 +95,15 @@ The metadata can be used by browsers (how to display content or reload page), se
       <h1>Premiering in this location.</h1>
       <div class="col-md-12">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d408290.0854991009!2d-86.3082570005955!3d39.70433194564201!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x886b50ffa7796a03%3A0xd68e9df640b9ea7c!2sIndianapolis%2C%20IN!5e0!3m2!1sen!2sus!4v1571590949591!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+        <div class="col-md-12">
+          <p>This website is sponsored by the medicine, <a href="file:///Volumes/COLEGWORK/WebDev/project2/ad2-index.html" target="_blank">Lemono</a></p>
+        </div>
       </div>
     </div>
 
   </div><!-- /8 -->
 
 </div><!-- /row -->
-
 
 <!-- As usual, these Bootstrap and jQuery JavaScript files get loaded at the bottom of the document, right above where the "body" tag is closed, below. -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
