adjusted tablet vs desktop

--- a/ad2-index.html
+++ b/ad2-index.html
@@ -100,7 +100,7 @@ second<!DOCTYPE html>
       </div>
     </div><!-- /row -->
 
-    <div class="row animated bounceInRight">
+    <div class="row animated bounceInRight tablet">
 
        <div class="col-md-12">
         <h1>Trusted in these locations.</h1>
@@ -122,6 +122,23 @@ second<!DOCTYPE html>
           </div>
       </div>
     </div><!-- /row -->
+    <div class="row animated bounceInRight desktop">
+      <div class="col-lg-12">
+        <h1>Trusted in these locations.</h1>
+      </div>
+      <div class="col-lg-4">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d99370.36297093317!2d-77.08461580023939!3d38.89370913967648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7c6de5af6e45b%3A0xc2524522d4885d2a!2sWashington%2C%20DC!5e0!3m2!1sen!2sus!4v1571508386121!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" class="map"></iframe>
+      </div>
+
+      <div class="col-lg-4">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d184551.80858344134!2d-79.51814105054963!3d43.718403810977776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d4cb90d7c63ba5%3A0x323555502ab4c477!2sToronto%2C%20ON%2C%20Canada!5e0!3m2!1sen!2sus!4v1571508430779!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" class="map"></iframe>
+      </div>
+
+      <div class="col-lg-4">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d300233.19124883635!2d-118.23484423090969!3d34.02609846969616!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c75ddc27da13%3A0xe22fdf6f254608f4!2sLos%20Angeles%2C%20CA!5e0!3m2!1sen!2sus!4v1571508471347!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" class="map"></iframe>
+      </div>
+
+     </div><!-- /row -->
     <div class="row ">
       <h1>This website is sponsored by the movie, <a href="file:///Volumes/COLEGWORK/WebDev/project2/ad2-index.html" target="_blank">Mr. Spaghetti: Dangerous Maze</a></h1>
     </div>
