--- a/ad1-index.html
+++ b/ad1-index.html
@@ -37,6 +37,12 @@ The metadata can be used by browsers (how to display content or reload page), se
 <!-- now for your custom CSS loaded *after* the bootstrap CSS and google fonts are loaded, above-->
 <link href="css/custom.css" rel="stylesheet">
 
+<!-- type writer font from google-->
+<link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
+
+<!-- oswald font from google-->
+<link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
+
 </head>
 
 
