--- a/ad1-index.html
+++ b/ad1-index.html
@@ -55,7 +55,15 @@ The metadata can be used by browsers (how to display content or reload page), se
 
     <div class="col-md-12">
       <div class="col-md-12">
-        <img src="images/movie_poster.png" class="animated bounceInDown center" alt="Italian Trulli">
+        <img src="images/movie-poster.png" class="animated bounceInDown center" alt="Italian Trulli">
+      </div>
+
+      <div class="col-md-6 bottle-spag">
+        <img src="images/spag-char.png" class="animated bounceInUp" alt="Italian Trulli">
+      </div>
+
+      <div class="col-md-6 bottle-chef">
+        <img src="images/chef-char.png" class="animated bounceInUp" alt="Italian Trulli">
       </div>
     </div><!-- /jumbotron main-content -->
   </div>
